--- a/expense.html
+++ b/expense.html
@@ -22,11 +22,12 @@
             <option value="Diesel">Diesel</option>
             <option value="Food" selected>Food</option>
         </select>
+
         <input type="submit" id="submitButton" value="Add Expense" style="background-color: rgb(66, 199, 222);font-size: medium;">
     </form>
     <ul class="mainList" id="MainList">
     </ul>
-    
-    <script src = 'expensetracker.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
+    <script src = 'ExpenseCrud.js'></script>
 </body>
 </html>
